projects/compiler/test/lexer/strings_interpolation_error_unclosed_brace.out
Error at %FILE_NAME%:1:15
Unexpected end of file:
  |  "hello ${a + b
                   ^